# pytorch-conformer-ctc

./: .gitignore  README.md  pyproject.toml
src/pytorch_conformer_ctc/: base_config.py  models.py  tokens.py  trainer.py
src/pytorch_conformer_ctc/data/: datasets.py  transform.py
src/pytorch_conformer_ctc/modules/: conv_subsampling.py  preprocessor.py  specaugment.py
src/pytorch_conformer_ctc/utils/: decoding.py
src/scripts/: run_training.py
src/scripts/configs/: example_config.py
